agregado cont adicional y mejor typo

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,14 @@
                     a explicar lo que se puede hacer
                     en las ramas
                 </p>
+                <p>
+                    Algunas vainas sobre youtube
+                    blablabla
+                    blabalbal
+                    blablabla
+                    blbalablabalab
+                    blabalbalab
+                </p>
             </div>
         </div>
         
