--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,20 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui haremos un blogpost</h1>
-        <p>parrafo de inicio</p>
+        <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante
+                    del post
+                </h1>
+                <p>parrafo de inicio donde vamos
+                    a explicar lo que se puede hacer
+                    en las ramas
+                </p>
+            </div>
+        </div>
+        
     </body>
 </html>
