--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog 
                 <span id="tagline">tu blog
-                    de confianza
+                    maestro
                 </span>
             </div>
             <div id="post">
@@ -27,6 +27,7 @@
                     blbalablabalab
                     blabalbalab
                 </p>
+                <p>suscribete y like</p>
             </div>
         </div>
         
